--- a/css/style.css
+++ b/css/style.css
@@ -314,9 +314,9 @@ textarea.form__input {
 }
 
 .form__submit {
-    background: transparent;
+    /* background: transparent;
     border: 1px solid var(--text-secondary);
-    color: var(--text-primary);
+    color: var(--text-primary); */
     padding: 1rem 2rem;
     width: 100%;
     margin-top: 2rem;
@@ -332,6 +332,6 @@ textarea.form__input {
 .form__submit:hover {
     background: var(--text-primary);
     color: var(--bg-core);
-    border-color: var(--text-primary);
+    /* border-color: var(--text-primary); */
 }
 
