--- a/css/style.css
+++ b/css/style.css
@@ -164,12 +164,15 @@ body {
 }
 
 .card {
+    display: block;
     flex: 0 0 350px;
     text-align: center;
     opacity: 0.7;
     transform: scale(1);
     transition: all 0.4s ease;
     background: transparent;
+    text-decoration: none;
+    color: inherit;
 }
 
 /* Spotlight Effect */
@@ -304,7 +307,7 @@ body {
 .form__input:focus {
     outline: none;
     border-bottom-color: var(--text-primary);
-    box-shadow: 0 5px 15px -5px rgba(221, 221, 221, 0.2);
+    /* box-shadow: 0 5px 15px -5px rgba(221, 221, 221, 0.2); QUITAR SOMBREADO*/
 }
 
 /* Specific style for textarea */
@@ -314,9 +317,9 @@ textarea.form__input {
 }
 
 .form__submit {
-    /* background: transparent;
-    border: 1px solid var(--text-secondary);
-    color: var(--text-primary); */
+    background: transparent;
+    /* border: 1px solid var(--text-secondary); */
+    color: var(--text-primary);
     padding: 1rem 2rem;
     width: 100%;
     margin-top: 2rem;
