--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ body {
 .projects__grid {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 2rem;
     padding: 0 2rem;
 }
